add cvl properties files