@@ -31,26 +31,12 @@ do
    echo project=$3 >> ../compare.properties
     echo result=$4 >> ../compare.properties
     echo varToExclude=$5 >> ../compare.properties
-     echo type=assert >> ../compare.properties
+     echo type=all >> ../compare.properties
     echo dirOriginal=../log/$sosie/mutant >> ../compare.properties
     echo dirSosie=../log/$sosie/mutantSosie >> ../compare.properties
 
-echo "run assert compare"
 cat ../compare.properties
    java -Xmx2000m -XX:MaxPermSize=256m -cp $7/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar fr.inria.diversify.sosie.compare.refactor.CompareLogMain ../compare.properties
-
-   rm ../compare.properties
-    cp $2 ../compare.properties
-     echo project=$3 >> ../compare.properties
-    echo result=$4 >> ../compare.properties
-    echo varToExclude=$6 >> ../compare.properties
-     echo type=exception >> ../compare.properties
-    echo dirOriginal=../log/$sosie/mutant >> ../compare.properties
-    echo dirSosie=../log/$sosie/mutantSosie >> ../compare.properties
-
-echo "run exception compare"
-cat ../compare.properties
-   java -Xmx2000m -XX:MaxPermSize=256m -cp $7/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar fr.inria.diversify.sosie.compare.CompareLogMain ../compare.properties
 
 done
 
